add settings for footer nav toggle

--- a/settings.json
+++ b/settings.json
@@ -29,7 +29,8 @@
   "PATH_BLOG_TEMPLATE_PARTIALS_PATH": "",
   "PORTFOLIO_WORK_SHOW": "true",
   "PORTFOLIO_ABOUT_SHOW": "true",
-  "PORTFOLIO_FOOTER_CONNECT_SHOW": "true",
+  "PORTFOLIO_FOOTER_CONNECT_OMIT": "false",
+  "PORTFOLIO_FOOTER_NAV_OMIT": "false",
   "PORTFOLIO_SITE_TITLE": "Site Title",
   "PORTFOLIO_SITE_OWNER": "Lorem Ipsum",
   "PORTFOLIO_BLOG_COPYRIGHT": "All images &copy; the author of this website unless otherwise indicated.",
