--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,6 @@
     "font-awesome": "~4.0.3",
     "jquery": "~2.0.3",
     "imagesloaded": "~3.0.4",
-    "video.js": "~4.1.0",
     "bootstrap-sass": "3.0.2",
     "fastclick": "~0.6.10",
     "showdown": "~0.3.1",
@@ -38,10 +37,7 @@
     "angular-route": "~1.2.0",
     "angular-moment": "~0.6.0",
     "store-js": "~1.3.14",
-    "firebase": "~1.0.2"
-  },
-  "resolutions": {
-    "angular": "~1.2.0",
-    "video.js": "~5.11.2"
+    "firebase": "~1.0.2",
+    "video.js": "5.10.8"
   }
 }
