--- a/.gitignore
+++ b/.gitignore
@@ -52,4 +52,8 @@ Gemfile.lock
 /selenium
 /bower_components/video.js
 !/bower_components/video.js/dist
+/bower_components/video.js/dist/alt
+/bower_components/video.js/dist/lang
+/bower_components/video.js/dist/examples
+/bower_components/video.js/dist/*.zip
 
