--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "selenium-webdriver": "~2.37.0",
     "time-grunt": "~0.2.0"
   },
-  "dep": {},
+  "dep": {
+
+  },
   "engines": {
     "node": ">=4.0"
   },
