--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
+sudo: false
+
 language: node_js
+
 node_js:
-  - "4"
+  - 4
+
+addons:
+  firefox:
+    "latest"
+
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-install:
-  - "npm install -g grunt-cli"
-  - "npm install"
+  # Make sure we have new NPM.
+  - npm install -g npm
+  - npm install -g grunt-cli
+  - npm config set loglevel warn
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
