Test: use firefox driver for protractor, related updates
- FF pre-installed on Travis
- related updates to specs b/c FF works slightly differently

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,16 @@ addons:
   firefox:
     "latest"
 
-before_script:
+before_install:
   # Make sure we have new NPM.
   - npm install -g npm
-  - npm install -g grunt-cli
   - npm config set loglevel warn
+
+after_install:
+  - npm install -g grunt-cli
+  - npm install -g protractor@4.0.3
+  - webdriver-manager update
+
+before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
