--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "grunt-rev": "~0.1.0",
     "grunt-s3": "~0.2.0-alpha.3",
     "grunt-sass": "~1.2.1",
+    "grunt-shell": "^1.3.1",
     "grunt-usemin": "~3.1.1",
     "handlebars-helper-partial": "^0.1.3",
     "handlebars-helpers": "~0.5.8",
@@ -61,10 +62,10 @@
     "nconf": "~0.6.7",
     "node-spritesheet": "~0.4.2",
     "phantomjs": "~1.9.2-2",
+    "protractor": "^4.0.3",
     "sauce-connect-launcher": "~0.5.0",
     "selenium-webdriver": "~2.37.0",
-    "time-grunt": "~0.2.0",
-    "protractor": "^4.0.3"
+    "time-grunt": "~0.2.0"
   },
   "engines": {
     "node": ">=4.0"
