--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,16 @@ before_install:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install -g grunt-cli
-  - npm install -g protractor@4.0.3
+  - which Firefox
+  - Firefox --version
+  - echo ${PATH}
+  #- npm install -g grunt-cli
+  #- npm install -g protractor@4.0.3
   # http://julianveling.com/?p=347
-  - webdriver-manager update
-  - webdriver-manager start 2>&1 &
-  - sleep 3
-  - grunt serve:prod 2>&1 &
+  #- webdriver-manager update
+  #- nohup bash -c "webdriver-manager start 2>&1 &"
+  #- sleep 3
+  #- nohup bash -c "grunt serve:prod 2>&1 &"
   # wait for prod compile and serve to finish...
-  - sleep 120
+  #- sleep 120
 
