--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 
 addons:
   firefox:
-    "latest"
+    "latest-esr"
 
 before_install:
   # Make sure we have new NPM.
@@ -17,12 +17,13 @@ before_install:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - which Firefox
-  - Firefox --version
-  - echo ${PATH}
-  #- npm install -g grunt-cli
-  #- npm install -g protractor@4.0.3
+  - npm install -g grunt-cli
+
+  # TODO: try use grunt-protractor-runner once protractor 4.0 integration is fixed
+  # https://github.com/teerapap/grunt-protractor-runner/issues/165
   # http://julianveling.com/?p=347
+
+  #- npm install -g protractor@4.0.3
   #- webdriver-manager update
   #- nohup bash -c "webdriver-manager start 2>&1 &"
   #- sleep 3
