--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-assemble-contextual": "~0.1.0",
     "grunt-assemble-permalinks": "~0.1.1",
     "grunt-assemble-wordcount": "~0.1.0",
+    "grunt-aws": "^0.6.2",
     "grunt-cli": "~1.2.0",
     "grunt-concurrent": "~2.3.1",
     "grunt-contrib-clean": "~1.0.0",
@@ -41,7 +42,6 @@
     "grunt-open": "~0.2.3",
     "grunt-plato": "~1.2.1",
     "grunt-rev": "~0.1.0",
-    "grunt-s3": "~0.2.0-alpha.3",
     "grunt-sass": "~1.2.1",
     "grunt-shell": "^1.3.1",
     "grunt-usemin": "~3.1.1",
