--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
+  "BUILD": "2017.02.21",
   "SERVER_HOSTNAME": "localhost",
   "DEV_HOSTNAME": "localhost",
   "PRODUCTION_HOSTNAME": "domain.com",
@@ -8,9 +9,10 @@
   "SAUCE_ACCESS_KEY": "sauce_key",
   "USE_SAUCE": "false",
 
-  "BUILD": "2016.10.13",
   "BLOG_URL": "http://jfroom.github.io/portfolio-web/blog",
   "BLOG_URL_TARGET": "_self",
+  "PATH_BLOB": "//domain.com/blob/site",
+  
   "S3_PORTFOLIO_USER": "username",
   "S3_PORTFOLIO_KEY": "key",
   "S3_PORTFOLIO_SECRET": "secret",
@@ -19,7 +21,6 @@
   "S3_PORTFOLIO_ACCESS": "public-read",
   "S3_PORTFOLIO_INDEX_ACCESS": "public-read",
 
-  "PATH_BLOB": "http://domain.com/blob/site",
   "PATH_PORTFOLIO_DATA": "app/assets/data/",
   "PATH_PORTFOLIO_DATA_WORK": "app/assets/data/workData.json",
   "PATH_PORTFOLIO_DATA_HUMANS": "app/assets/data/humansData.json",
