Update S3 upload options

--- a/settings.json
+++ b/settings.json
@@ -17,9 +17,11 @@
   "S3_PORTFOLIO_KEY": "key",
   "S3_PORTFOLIO_SECRET": "secret",
   "S3_PORTFOLIO_BUCKET": "bucket.id",
-  "S3_PORTFOLIO_PATH": "",
-  "S3_PORTFOLIO_ACCESS": "public-read",
-  "S3_PORTFOLIO_INDEX_ACCESS": "public-read",
+  "S3_PORTFOLIO_REGION": "region",
+  "S3_PORTFOLIO_BUCKET": "bucket",
+  "S3_PORTFOLIO_PATH": "/",
+  "S3_PORTFOLIO_INDEX_BUCKET": "bucket",
+  "S3_PORTFOLIO_INDEX_PATH": "/",
 
   "PATH_PORTFOLIO_DATA": "app/assets/data/",
   "PATH_PORTFOLIO_DATA_WORK": "app/assets/data/workData.json",
